welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:13: error: Unmatched closing brace '}' ignored here
 }
 ^