welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
	var z:Int = 0
	var y:Int = 0
	for ( x <- 0 to nums.length-1) {
		if (nums(x) >= y) { y=nums(x); z=x}
	}
	return z
}
	

}
